Fri May 18 20:32:11 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/IDLTemplate.pm:
        * dds/DCPS/BuiltInTopicUtils.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DdsDcps.mpc:
        * dds/DdsDcpsInfrastructure.idl:

          Support moving ZeroCopyDataSeq instantiation from FooC.h 
          to FooTypeSupportC.h (where it was when it was sequence<Foo>)
          by adding #PRAGMA DCPS*ZERO_COPY* and resolving circular includes.

        * dds/DCPS/ZeroCopySeq_T.cpp:
        * dds/DCPS/ZeroCopySeq_T.h:
        * dds/DCPS/ZeroCopySeq_T.inl:

          Support the assignment operator -- needed for BIT.

Thu May 17 20:07:21 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * performance-tests/DCPS/TypeNoKeyBounded/TypeNoKeyBounded.mpc:
        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.cpp:
        * performance-tests/DCPS/TCPListenerTest/subscriber.cpp:
        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.h:
        * performance-tests/DCPS/TCPListenerTest/Writer.cpp:
        * performance-tests/DCPS/TCPListenerTest/publisher.cpp:

          Removed --Module Mine and its impacts.
          Made other remote to local interface changes.

Mon May 14 20:23:33 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * dds/DCPS/ZeroCopySeq_T.h:
        
          Fix test build issue.

Mon May 14 19:14:12 UTC 2007  Scott Harris  <harris_s@ociweb.com>

        * tests/DCPS/FooType5/DcpsFooType5.mpc:
        * tests/DCPS/ZeroCopyRead/main.cpp:
        * tests/DCPS/FooTest5/DataReaderListener.cpp:
        * tests/DCPS/FooTest5/subscriber.cpp:
        * tests/DCPS/FooTest5/DataReaderListener.h:
        * tests/DCPS/FooTest5/Writer.cpp:
        * tests/DCPS/FooTest5/publisher.cpp:
        
          Removed --Module and changes related to that.
          Changed the listener to be a local interface.

        * bin/DCPS/IDLTemplate.pm: