@@ -17,6 +17,7 @@
 #include "dds/DdsDcpsInfoUtilsC.h"
 #include "dds/DdsDcpsSubscriptionC.h"
 #include "Service_Participant.h"
+#include "dds/DCPS/DomainParticipantImpl.h"
 
 namespace TAO {
   namespace DCPS {
