@@ -1701,7 +1701,7 @@ bool DataReaderImpl::is_bit () const
 
 //REMOVE this when we can change this method back to a pure virtual method.
 DDS::ReturnCode_t 
-DataReaderImpl::auto_return_loan(void* seq) // = 0;
+DataReaderImpl::auto_return_loan(void* ) // = 0;
 {
     ACE_ASSERT("DataReaderImpl::auto_return_loan not implemented"==0);
     return ::DDS::RETCODE_ERROR;
